# chimerax-mcp

./: .gitignore  API_DESIGN.md  AUTO_START_SOLUTION.md  BUILD.md  CHIMERAX_SETUP.md  CONFIGURATION_FOR_THIS_MACHINE.md  DEPLOYMENT.md  DISTRIBUTION_READY.md  FINAL_REVIEW.md  FINAL_SETUP.md  FIXED_PORT_ISSUE.md  INSTALLER_CHECKLIST.md  LICENSE  Makefile  QUICKSTART.md  README.md  TEST_RESULTS.md  WINDOWS_SETUP.md  build.bat  chimerax_mcp_config.json  chimerax_mcp_server.py  chimerax_mcp_server.spec  claude_desktop_config.json  claude_desktop_config_EXECUTABLE.json  full_integration_test.py  installer.iss  pyproject.toml  quick_test_exe.bat  test_chimerax.py  test_executable.py  test_mcp_server.py  test_mcp_stdio.py  update_claude_config.py
.claude/: settings.local.json
